Bug 891338 - Popup accessibility broken, r=tbsaunde, roc, f=marcoz, jamie